[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Environment/RoomHider.gd" type="Script" id=1]

[node name="RoomHider" type="Polygon2D"]
visible = false
z_index = 30
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -64, -64, -64, 64, 64, 64, 64, -64 )
script = ExtResource( 1 )

[node name="DetectPlayer" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DetectPlayer"]
polygon = PoolVector2Array( -64, -64, -64, 64, 64, 64, 64, -64 )

[node name="Tween" type="Tween" parent="."]

[connection signal="area_entered" from="DetectPlayer" to="." method="_on_DetectPlayer_area_entered"]
[connection signal="area_exited" from="DetectPlayer" to="." method="_on_DetectPlayer_area_exited"]
